# dailybible-settings

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  package-lock.json
.github/workflows/: dioxus.yml
assets/: dailybible-settings-1f459d3a8d9e88c6.js  dailybible-settings-1f459d3a8d9e88c6.js.br  dailybible-settings-fe9af66723440c57.js  dailybible-settings-fe9af66723440c57.js.br  dailybible-settings_bg-353e7e213ce455e3.wasm  dailybible-settings_bg-353e7e213ce455e3.wasm.br  dailybible-settings_bg-417a6c1582071ef5.wasm  dailybible-settings_bg-417a6c1582071ef5.wasm.br  dailybible-settings_bg-766f29a6536a957d.wasm  dailybible-settings_bg-766f29a6536a957d.wasm.br  dailybible-settings_bg-933109c4162692d9.wasm  dailybible-settings_bg-933109c4162692d9.wasm.br  dailybible-settings_bg-d54611b32083bc75.wasm  dailybible-settings_bg-d54611b32083bc75.wasm.br  main-7fdaaca7fe2020a7.css  main-7fdaaca7fe2020a7.css.br  main.css  pico.min-09975b848b7db1a0.css  pico.min-09975b848b7db1a0.css.br
locales/: app.yml
src/: main.rs
